--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,107 @@
+body{
+  height: 1000px;
+  padding-top: 15px;
+  background-color: ghostwhite;
+}
+/* li{
+  list-style: none;
+} */
+/* button{
+  height: 30px;
+  width: 120px;
+  cursor: pointer;
+  font-size: 16px;
+} */
+.input-div{
+  display: flex;
+  justify-content: center;
+}
+.btn-RNM{
+  height: 25px;
+  width: 80px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.quote{
+  padding: 10px;
+  box-shadow: 2px 2px 8px black;
+}
+
+.quote div{
+  text-align: right;
+}
+ul{
+  list-style: none;
+}
+.users-card{
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.401);
+  width: 340px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 25px;
+  background-color: #fff;
+}
+.users-card img{
+  width: 180px;
+  height: 180px;
+}
+.countries-card{
+  border-radius: 15px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.401);
+  width: 400px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 25px;
+  background-color: #fff;
+  padding-bottom: 15px;
+}
+.countries-card img{
+  margin: 20px;
+}
+p{
+  margin: 0;
+}
+.title-country{
+  width: 400px;
+  margin-left: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .App {
   text-align: center;
 }
