--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,127 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
   height: 1000px;
-  padding-top: 15px;
-  background-color: ghostwhite;
+  /* padding-top: 15px; */
+  background-color: rgb(34, 34, 55);
 }
 
-.input-div{
+header{
+  /* background-image: url(./images/27353-rick-y-morty.png); */
+  background: url(./images/27388-rick-y-morty.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 center;
+  /* background-size: 100% 97%; */
+  /* background-color: #282c34; */
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+}
+section{
+  padding-top: 270px;
+  position: absolute;
+  width: 100%;
+}
+.title{
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.principal-div{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 1rem auto;
+  width: 90%;
+  max-width: 900px;
+}
+
+/* form area */
+.form{
+  width: 100%;
+  height: 50px;
+  max-width: 700px;
+  position: relative;
+  overflow: hidden;
+}
+.form input{
+  width: 100%;
+  height: 100%;
+  background: none;
+  color: #fff;
+  padding-top: 20px;
+  border: none;
+  outline: 0px;
+}
+.form .lbl-name{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  border-bottom: 1px solid #c7c7c7;
+}
+.form .lbl-name:after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 100%;
+  border-bottom: 3px solid #2ecece;
+  transform: translateX(-100%);
+  transition: all 0.3s ease;
+}
+.txt-name{
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  transition: all 0.3s ease;
+  color: #fff;
+}
+.form input:focus + .lbl-name .txt-name,
+.form input:valid + .lbl-name .txt-name{
+  transform: translateY(-150%);
+  font-size: 12px;
+  color: #2ecece;
+}
+.form input:focus + .lbl-name:after{
+  transform: translateX(0%);
+}
+
+
+
+
+
+
+.search-div{
   display: flex;
   justify-content: center;
+  align-items: end;
+  gap: 5px;
+}
+.input-txt{
+  flex-basis: 100%;
+  /* width: 230px;
+  height: 19px;
+  max-width: 900px; 1280mq */
 }
 
 .btn-RNM{
-  height: 25px;
+  height: 30px;
   width: 80px;
   cursor: pointer;
   font-size: 16px;
+  color: white;
+  background: none;
+  border: none;
+  box-shadow: 1px 1px 5px #2ecece;
+  border-radius: 5px;
 }
 
 ul{
@@ -52,10 +160,10 @@ p{
 
 
 
-
-
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
@@ -91,8 +199,4 @@ p{
   to {
     transform: rotate(360deg);
   }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
 }
