--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body{
 }
 
 header{
-  /* background-image: url(./images/27353-rick-y-morty.png); */
   background: url(./images/27388-rick-y-morty.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -94,6 +93,43 @@ section{
   transform: translateX(0%);
 }
 
+/* End form space */
+
+.cards{
+  display: flex;
+  width: 100%;
+  min-width: 380px;
+  height: 160px;
+  margin: 5px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #2ecece9c;
+}
+.cards-img>img{
+  height: 100%;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  width: 160px;
+}
+.cards-info{
+  text-align: center;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+}
+ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+.title-info{
+  display: flex;
+  justify-content: space-around;
+}
+
+
 
 
 
@@ -133,39 +169,23 @@ ul{
 p{
   margin: 0;
 }
-h1, h3{
+h1{
   font-family: 'Pangolin', cursive;
   color: rgba(1, 214, 214, 0.789);
+}
+h3{
+  font-family: 'Pangolin', cursive;
+  color: black;
 }
 
 .title>h1{
   font-size: 2.5rem;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* .title>h1{
+  font-size: 2.5rem;
+  font-family: 'Pangolin', cursive;
+  color: rgba(1, 214, 214, 0.789);
+} */
 
 
 .App {
@@ -206,5 +226,54 @@ h1, h3{
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+/* Media Querys */
+
+@media (max-width: 875px) {
+  ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+    align-self: center;
+  }
+  .cards{
+    display: flex;
+    width: 100%;
+    min-width: 369px;
+    height: 160px;
+    margin: 5px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: #2ecece9c;
+  }
+}
+@media (max-width: 768px) {
+  ul{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    align-self: center;
+  }
+  .cards{
+    display: flex;
+    width: 100%;
+    max-width: 539px;
+    /* width: 539px; */
+    height: 160px;
+    margin: 5px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: #2ecece9c;
+    overflow: hidden;
+  }
+  .cards-info{
+    text-align: left;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
   }
 }
