--- a/src/App.css
+++ b/src/App.css
@@ -113,12 +113,13 @@ section{
   width: 160px;
 }
 .cards-info{
-  text-align: center;
+  text-align: left;
   padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
+  margin-left: 5px;
 }
 ul{
   display: grid;
@@ -135,6 +136,13 @@ ul{
   font-size: 2rem;
   margin-top: 15px;
   margin-bottom: 30px;
+}
+.gray-p{
+  font-size: 12px;
+  color: #c7c7c7d4;
+}
+.gray-b{
+  color: #c7c7c7d4;
 }
 
 
@@ -314,4 +322,17 @@ h3{
     justify-content: space-around;
     width: 100%;
   }
+  .title-info{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+@media (max-width: 670px) {
+  .title-info{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
 }
